--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "bin": {},
   "dependencies": {
     "acorn": "^2.4.0",
+    "mkdirp": "^0.5.1",
     "underscore": "^1.8.3",
     "xmldom": "^0.1.19",
     "xpath": "0.0.9"
