--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "bin": {},
   "dependencies": {
     "acorn": "^2.4.0",
+    "js-beautify": "^1.5.10",
     "mkdirp": "^0.5.1",
     "xmldom": "^0.1.19",
     "xpath": "0.0.9"
