--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "acorn": "^2.4.0",
     "js-beautify": "^1.5.10",
     "mkdirp": "^0.5.1",
+    "underscore": "^1.8.3",
     "xmldom": "^0.1.19",
     "xpath": "0.0.9"
   }
